Adding dependency injection container
