# src/modules/cars/useCases/createSpecification/CreateSpecificationController.ts
@@ -1,18 +1,18 @@
 import{Request,Response} from "express"
-
 import { CreateSpecificationUseCase } from "./CreateSpecificationUseCase";
+import {container} from "tsyringe"
 
 class CreateSpecificationController{
-  
-  constructor (private createSpecificationUseCase: CreateSpecificationUseCase){}
-  
-  handle (request:Request, response:Response):Response{
+     
+  async handle (request:Request, response:Response): Promise<Response>{
     const {name,description}=request.body
+
+    const createSpecificationUseCase=container.resolve(CreateSpecificationUseCase);
     
-    this.createSpecificationUseCase.execute({name,description});
+    await createSpecificationUseCase.execute({name,description});
 
-    return response.status(201).send();
-
+    return response.status(201).send("Specification created");
   }
 }
+
 export {CreateSpecificationController}
